Added Readme file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <aside id="contents">
-        <h3>Conteúdo</h3>
+        <h3>Contents</h3>
         <ul id="content_list"></ul>
       </aside>
       <article id="paper" class="markdown-body"></article>
