Removal of issues in CSS and Javascript.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <article id="paper" class="markdown-body"></article>
   </body>
 
+  <script src="js/prototypes.js" type="text/javascript"></script>
+
   <!-- Scripts de Markdown -->
   <script src="node_modules/showdown/dist/showdown.js" type="text/javascript"></script>
   <script src="js/md_manager.js" type="text/javascript"></script>
